cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
project (L2L-CPP)

# caching
find_program(CCACHE_FOUND ccache) 
if(CCACHE_FOUND) 
  set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache) 
  set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache) 
endif(CCACHE_FOUND) 
# set (CMAKE_CXX_FLAGS "-DPCL_ONLY_CORE_POINT_TYPES=ON -DNO_EXPLICIT_INSTANTIATIONS") 

option (BUILD_EXAMPLES "Build websocketpp examples." FALSE)

set (L2L-CPP_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
set (L2L-CPP_INCLUDE ${L2L-CPP_ROOT}/src)
set (L2L-CPP_BUILD_ROOT ${CMAKE_CURRENT_BINARY_DIR})
set (L2L-CPP_BIN ${L2L-CPP_BUILD_ROOT}/bin)
set (L2L-CPP_LIB ${L2L-CPP_BUILD_ROOT}/lib)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

if (BUILD_EXAMPLES)
  add_subdirectory(examples)
endif()

add_subdirectory(src)

install(DIRECTORY src/ DESTINATION include
        FILES_MATCHING PATTERN "*.hpp")